2010-02-03	Bart Vanbrabant <bart at vanbrabant.eu>

		* Include the resolve path function from php so it is available for
		older PHP versions as well. Includes that start file:// work now.

2010-02-02  Bart Vanbrabant <bart at vanbrabant.eu>

		* Fix two compiler warnings

2010-02-01  Bart Vanbrabant <bart at vanbrabant.eu>

		* A retab on eaccelerator.c
		* Remove caching based on inodes
		* Reimplement eaccelerator_stat to speed it up: the new ea_stat is
		almost twice as fast as the old version with inodes. The tests were
		done on a file that includes 10k empty files.
		* Increment version to 1.0-dev

2010-01-22	Bart Vanbrabant <bart at vanbrabant.eu>

		* Release 0.9.6-rc2

2010-01-21	Hans Rakers <hans at react.nl>

		* Set op_array->early_binding in a later stage.
		  This fixes ticket #394

2010-01-20	Hans Rakers <hans at react.nl>

		* Some more work on delayed early binding. This fixes
		  ticket #388
		* Some reformatting in ea_dasm.c
		* Win32 VC6 project file updated

2010-01-19	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove obsolete documentation
		* Update year in copyright

2010-01-19	Hans Rakers <hans at react.nl>

		* Implemented ZEND_GOTO
		* Implemented delayed early binding for php-5.3. This
		  solves ticket #146 (Problems with require_once with
		  circular dependencies) for everyone using php-5.3.
		  See http://marc.info/?l=php-internals&m=120539866910125&w=2
		  for more info on this.
		* Fixed ticket #386 (Crash using const & php-5.3)
		* Fixed a bunch of other php-5.3 related issues found by
		  using the test suite and all php-5.3 Zend engine tests
		* Win32 project files updated
		* Win32 ZTS fixes

2009-12-23	Hans Rakers <hans at react.nl>

		* Fixed ticket #383 (crash on ZEND_ADD_INTERFACE)
		* check_mtime can now be enabled/disabled through the web
		  interface as requested in ticket #32
		* Shortened some variable names
		* ZEND_JMP_SET support

2009-12-01	Hans Rakers <hans at react.nl>
