@@ -2,6 +2,8 @@
 
 		* Include the resolve path function from php so it is available for
 		older PHP versions as well. Includes that start file:// work now.
+		* Enable phar caching: Files in included from a phar file are cached
+		now. The phar archive is used to excute the stat on.
 
 2010-02-02  Bart Vanbrabant <bart at vanbrabant.eu>
 
